fix: fix paddings at popup (and hide scrollbar)

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -919,7 +919,7 @@ a {
     padding: 10px;
 
     &::-webkit-scrollbar {
-        opacity: 0;
+        display: none;
     }
 
     &:hover {
